--- a/nginx-deployment.yaml
+++ b/nginx-deployment.yaml
@@ -13,7 +13,7 @@ spec:
         app: nginx
     spec:
       containers:
-      – name: nginx
-        image: nginx
+      - name: nginx
+        image: arivera/nginx
         ports:
-        – containerPort: 80
+        - containerPort: 80
